HighContrast: Fix shadow size
Ensure that the shadow extents don't change as we go to backdrop,
to prevent windows from jumping.

--- a/gtk/theme/HighContrast/gtk.css
+++ b/gtk/theme/HighContrast/gtk.css
@@ -2739,7 +2739,7 @@ decoration {
   /* this is used for the resize cursor area */
   margin: 10px; }
   decoration:backdrop {
-    box-shadow: 0 2px 6px 2px rgba(0, 0, 0, 0.2), 0 0 0 1px rgba(0, 0, 0, 0.18); }
+    box-shadow: 0 2px 6px 2px rgba(0, 0, 0, 0.2), 0 3px 9px 1px transparent, 0 0 0 1px rgba(0, 0, 0, 0.18); }
   decoration.tiled {
     border-radius: 0; }
   decoration.csd.popup {
